# libmodbusc-

./: .travis.yml  .travis_run.sh  CMakeLists.txt  LICENSE  ModbusConsts.hpp  ModbusEncoder.hpp  Readme.md  test.cpp
.travis_docker/: Dockerfile
client_cli/: Makefile  ModbusClient.hpp  ModbusCommand.hpp  ModbusCommands.hpp  ModbusHelpCommand.hpp  ModbusReadCoilsCommand.hpp  main.cpp
encoder/: ModbusEncoderUtils.hpp  ModbusSerialized.hpp
modbuscli/: ModbusCommand.hpp  ModbusCommands.hpp  ModbusExitCommand.hpp  ModbusHelpCommand.hpp  ModbusReadCoilsCommand.hpp  main.cpp
server/: ModbusDevice.hpp  ModbusRequestHandler.hpp  ModbusSession.hpp
server_generic/: GenericBackend.hpp  main.cpp
server_utils/: ModbusRequestHandler.hpp  ModbusServer.hpp  ModbusSession.hpp
src/include/: ModbusConsts.hpp  ModbusDecoder.hpp  ModbusEncoder.hpp  ModbusPollTask.hpp  ModbusPollTaskFsm.hpp  ModbusPollTaskFsmActions.hpp  ModbusPollTaskFsmEvents.hpp  ModbusPollTaskFsmStates.hpp  ModbusPoller.hpp  ModbusRequests.hpp  ModbusResponses.hpp  ModbusServer.hpp  ModbusServerDevice.hpp  ModbusServerSession.hpp  ModbusTypes.hpp  SocketConnector.hpp  SocketConnectorFsm.hpp  SocketConnectorFsmActions.hpp  SocketConnectorFsmStates.hpp  fsm.hpp
src/modbuscli/: CMakeLists.txt  ModbusClient.hpp  (+19 more)
test/: CMakeLists.txt  Makefile  testReadCoils.cpp  testServer.cpp
test/modbus_poller/: CMakeLists.txt  test_modbus_poller.cpp  test_modbuspoller.cpp  test_socket_connector.hpp
test/modbuscli/: CMakeLists.txt  test_modbuscli.cpp  test_readcoils.hpp
test/socket_connector_fsm/: CMakeLists.txt  test_socket_connector_fsm.cpp
(+38 files in other folders)
